classDiagram
    class Node {
        +str url
        +str visited_time
        +Node prev
        +Node next
        +int db_id
    }

    class BrowserHistory {
        +Node head
        +Node tail
        +Node current
        +int size
        +visit(url, visited_time) Node
        +back() Node
        +forward() Node
        +show_current() Node
        +show_history() List~Node~
        +search(keyword) List~Node~
        +delete_page(target) bool
        +delete_forward_history() int
        +clear_history() None
    }

    class DatabaseManager {
        +str db_path
        -_get_connection() Connection
        -_create_table() None
        +clear_table() None
        +save_all(rows) None
        +load_all() List~Tuple~
        +get_row_count() int
        +is_connected() bool
    }

    class BrowserApp {
        +BrowserHistory history
        +DatabaseManager db
        +visit(url) Node
        +back() Node
        +forward() Node
        +search(keyword) List~Node~
        +delete_page(target) bool
        +clear_history() None
        +load_from_database() None
        +save_to_database() None
        +sync_database() None
    }

    BrowserHistory "1" o-- "many" Node : manages
    Node "1" --> "0..1" Node : next
    Node "1" --> "0..1" Node : prev
    BrowserApp "1" *-- "1" BrowserHistory : controls
    BrowserApp "1" *-- "1" DatabaseManager : persists via
